# document_filling

./: .gitignore  CMakeLists.txt  README.md  mainwindow.ui  resources.qrc
Header Files/: datamanager.h  mainwindow.h  structs.h  studentitemwidget.h
Header_Files/: structs.h  studentitemwidget.h
Source Files/: datamanager.cpp  mainwindow.cpp  pdfgenerator.cpp  studentitemwidget.cpp
Source_Files/: datamanager.cpp  main.cpp  mainwindow.cpp  pdfgenerator.cpp
src/: datamanager.cpp  datamanager.h  main.cpp  mainwindow.cpp  mainwindow.h  pdfgenerator.cpp  pdfgenerator.h  structs.h
